# ai_agent

./: .gitignore  README.md  pyproject.toml  requirements.txt  skills-lock.json  test.txt
apps/agent/app/: main.py
apps/agent/app/graph/: builder.py  schemas.py  state.py
apps/agent/app/graph/nodes/: discovery.py  network.py  reasoning.py  validation.py
apps/agent/app/services/: discovery_service.py  network_service.py  summary_service.py  validation_service.py
apps/agent/app/tools/: registry.py
apps/agent/app/tools/profiles/: discovery.yaml  network.yaml  reasoning.yaml  validation.yaml
apps/agent/app/utils/: config.py  messages.py
configs/: dev.yaml  prompts.yaml
docs/superpowers/plans/: 2026-03-10-langgraph-pipeline-plan.md
docs/superpowers/specs/: 2026-03-10-langgraph-pipeline-design.md
mcp-servers/: test_discovery_server.py  test_discovery_server1.py  test_discovery_server2.py  test_network_server.py  test_validation_server.py
mcp-servers/bio/: discovery_server.py
mcp-servers/bio/services/: deg_analysis.py
